--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/home/menu-home/menu-home.component.css
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/home/menu-home/menu-home.component.css
@@ -1,3 +1,20 @@
+.menu {
+    margin-left: 240px;
+    font-size: 19px;
+}
+
+.sub-menu {
+    margin-left: 240px;
+    font-size: 15px;
+}
+
+.alinhamento-botoes {
+    justify-content: flex-end;
+    position: absolute;
+    right: 12px;
+    bottom: 46px;
+}
+
 .margem-botoes{
     margin: 3px;
 }
