--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/menu-geral/menu-geral.component.css
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/menu-geral/menu-geral.component.css
@@ -1,3 +1,14 @@
 .logo-greatpeople {
-    width: 150px;
+    width: 160px;
+}
+
+.menu {
+    margin-left: 50px;
+    font-size: 19px;
+}
+
+.sub-menu {
+    margin-left: 50px;
+    font-size: 15px;
+
 }
