--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/dados-usuario/dados-usuario.component.css
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/dados-usuario/dados-usuario.component.css
@@ -1,6 +1,68 @@
-.margem-botao{
-    margin-right: 5px;
-}
-.tamanho-form{
-    max-width: 400px;
-}
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Righteous&family=Sarala:wght@700&display=swap');
+
+.fundo-externo {
+    padding-bottom: 30px;
+    width: 100%;
+    }
+    
+    .alinhamento {
+        border: solid 1px #5E7888;
+        background-color: #D2D9DE; ;
+        width: 500px;
+        height: 580px; 
+        padding-top: 50px; 
+        padding-left: 70px; 
+        padding-right: 70px; 
+        padding-bottom: 100px;
+        margin-top: 30px;
+        margin-bottom: 100px;
+    }
+    
+    .titulo {
+        padding-top: 20px;
+        padding-bottom: 5px;
+        font-family: 'DM Sans', sans-serif;
+    }
+    
+    p {
+        font-size: 17px;
+    }
+    
+    .negrito {
+        font-weight: bold;
+    
+    }
+    
+    .margem-botao{
+        margin-right: 5px;
+    }
+    
+    .alinhamento-botao{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 15px;
+    }
+    
+    .botao-alterar {
+        color: #fff;
+        background-color:#5D8A66;
+        border: solid 1px #fff;
+        margin-right: 4px;
+        transition: transform 2ms;
+    }
+    
+    .botao-alterar:hover{
+        transform: scale(1.08);
+    }
+    
+    .botao-exclusao {
+        color: #fff;
+        background-color: red;
+        border: solid 1px #fff;
+        transition: transform 2ms;
+    }
+    
+    .botao-exclusao:hover{
+        transform: scale(1.08);
+    }
