--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/dados-usuario/dados-usuario.component.html
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/dados-usuario/dados-usuario.component.html
@@ -1,22 +1,23 @@
 <div class="container">
-    <h2 class="">Dados de Usuário</h2>
-    <form class="tamanho-form">
-        <div>
-            <p>Nome: {{empresa.nome}}</p>
-            <p>Razão Social: : {{empresa.razaoSocial}}</p>
-            <p>CNPJ: {{empresa.cnpj | formatacaocnpj}}</p>
-            <p>Telefone: {{empresa.telefone | formatacaotelefone}}</p>
-            <p>Site: {{empresa.site}}</p>
-            <p>Endereço:</p>
-            <p>CEP: {{endereco.cep | formatacaocep}}</p>
-            <p>Logradouro: {{endereco.logradouro}}</p>
-            <p>Número: {{endereco.numero}}</p>
-            <p>Estado: {{endereco.uf}}</p>
-            <p>Cidade: {{endereco.cidade}}</p>
+    <div class="fundo-externo">
+        <h2 class="titulo">Dados de Usuário</h2>
+        <div class="alinhamento fundo-externo">
+            <div class="dados">
+                <p><span class="negrito">Nome: </span>{{empresa.nome}}</p>
+                <p><span class="negrito">Razão Social: </span>{{empresa.razaoSocial}}</p>
+                <p><span class="negrito">CNPJ: </span>{{empresa.cnpj | formatacaocnpj}}</p>
+                <p><span class="negrito">Telefone: </span>{{empresa.telefone | formatacaotelefone}}</p>
+                <p><span class="negrito">Site: </span>{{empresa.site}}</p>
+                <p><span class="negrito">CEP: </span>{{endereco.cep | formatacaocep}}</p>
+                <p><span class="negrito">Logradouro: </span>{{endereco.logradouro}}</p>
+                <p><span class="negrito">Número: </span>{{endereco.numero}}</p>
+                <p><span class="negrito">Estado: </span>{{endereco.uf}}</p>
+                <p><span class="negrito">Cidade: </span>{{endereco.cidade}}</p>
+                <div class="mb-3 alinhamento-botao">
+                    <button class="btn botao-alterar" routerLink="/painelEmpresa/alterar/{{empresa.id}}">Alterar</button>
+                    <button class="btn botao-exclusao margem-botao" routerLink="/painelEmpresa/excluir/{{empresa.id}}">Excluir conta</button>
+                </div>
+            </div>
         </div>
-        <div class="mb-3">
-            <button class="btn btn-warning margem-botao" routerLink="/painelEmpresa/alterar/{{empresa.id}}">Alterar</button>
-            <button class="btn btn-danger margem-botao" routerLink="/painelEmpresa/excluir/{{empresa.id}}">Excluir conta</button>
-        </div>  
-    </form>
+    </div>
 </div>
