--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/painel-empresa/painel-empresa.component.html
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/painel-empresa/painel-empresa.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <h1 class="display-6 text mb-3 margem-superior">Boas vindas, {{empresa.nome}}!</h1>
-  <h2 class="text mb-3 margem-superior">Painel de Controle:</h2>
+  <h1 class="display-6 text mb-3 margem-superior">Boas vindas ao painel de controle, {{empresa.nome}}!</h1>
+  <hr>
   <app-suas-vagas></app-suas-vagas>
+  <hr>
   <app-dados-usuario></app-dados-usuario>
 </div>
