--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/suas-vagas/suas-vagas.component.html
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/suas-vagas/suas-vagas.component.html
@@ -1,20 +1,23 @@
 <div class="margem-superior">
-    <h2 class="mb-3">Suas Vagas</h2>
+    <h2 class="mb-3 titulo">Suas Vagas</h2>
     <div class="d-flex mb-3">
         <div class="me-auto p-2">
             <input class="form-control me-2" size="50" type="search" placeholder="Pesquise pelo título da vaga" aria-label="Search" #busca (keyup)="0">
         </div>
       </div>
-    <table class="table table-striped mb-3">
-        <thead>
+      <div>
+        <button class="mb-3 btn btn-primary">Adicionar nova vaga</button>
+      </div>
+    <table class="table table-striped mb-3 tabela tabela-listrada" *ngIf="temVagasCadastradas">
+        <thead class="titulos-tabela">
             <tr>
-                <th>ID</th>
-                <th>Título da vaga</th>
-                <th>Modalidade</th>
-                <th>Turno</th>
-                <th>Escolaridade</th>
-                <th>Salário</th>
-                <th>Data limite de inscrição</th>
+                <th class="cabecalho-tabela">ID</th>
+                <th class="cabecalho-tabela">Título da vaga</th>
+                <th class="cabecalho-tabela">Modalidade</th>
+                <th class="cabecalho-tabela">Turno</th>
+                <th class="cabecalho-tabela">Escolaridade</th>
+                <th class="cabecalho-tabela">Salário</th>
+                <th class="alinhamento-data cabecalho-tabela">Data limite de inscrição</th>
                 <th></th>
             </tr>
         </thead>
@@ -26,9 +29,10 @@
                 <td>{{vaga.turno}}</td>
                 <td>{{vaga.escolaridade}}</td>
                 <td>{{vaga.salario | currency:"BRL"}}</td>
-                <td>{{vaga.datalimiteinscricao | date: "dd/MM/yy"}}</td>
-                <td><button class="btn btn-primary" routerLink="/painelEmpresa/detalhesVaga/{{vaga.id}}">Ver Detalhes</button></td>
+                <td class="alinhamento-data">{{vaga.datalimiteinscricao | date: "dd/MM/yy"}}</td>
+                <td><button class="btn botao-detalhes">Ver Detalhes</button></td>
             </tr>
         </tbody>
     </table>
+    <div class="alert alert-info text-center" *ngIf="!temVagasCadastradas">Você ainda não incluiu uma nova vaga</div>
 </div>
