Projeto 03/02 - Organiza código do Angular e da API e cria HTML, CSS e TS para página de erro.

--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/menu-geral/menu-geral.component.html
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/menu-geral/menu-geral.component.html
@@ -20,7 +20,7 @@
           </a>
           <ul class="dropdown-menu sub-menu">
             <li><a class="dropdown-item" routerLink="/home">Página Principal</a></li>
-            <li><a class="dropdown-item" routerLink="/login">Login Empresa</a></li>
+            <li><a class="dropdown-item" routerLink="/login">Login</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/cadastro">Cadastre-se</a></li>
           </ul>
