--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/erro/erro.component.html
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/erro/erro.component.html
@@ -1,1 +1,8 @@
-<p>erro works!</p>
+<div class="fundo-externo">
+    <div class="container alinhamento">
+        <h2 class="alert alert-danger">Ops, houve um problema. Não foi possível acessar esse recurso ou realizar essa operação.</h2>
+        <div>
+            <button class="btn botao-voltar" (click)="voltar()">Voltar para página principal</button> 
+        </div>  
+    </div>
+</div>
