Projeto 03/02 - Adiciona imagem do gráfico no painel de empresa e conecta com banco de dados remoto do Azure.

--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/suas-vagas/suas-vagas.component.css
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/suas-vagas/suas-vagas.component.css
@@ -5,6 +5,17 @@
     font-family: 'DM Sans', sans-serif;
 }
 
+.botao-vagas{
+    color: #fff;
+    background-color: #5E7888;
+    border: solid 1px #fff;
+    transition: transform 2ms;
+}
+
+.botao-vagas:hover{
+    transform: scale(1.08);
+}
+
 .titulos-tabela {
     font-size: 18px;
 }
@@ -13,6 +24,11 @@
     color: #fff;
     background-color: #5E7888;
     border: solid 1px #fff;
+    transition: transform 2ms;
+}
+
+.botao-detalhes:hover{
+    transform: scale(1.08);
 }
 
 .tabela-listrada>tbody>tr:nth-of-type(odd)>* {
