--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/suas-vagas/suas-vagas.component.html
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/suas-vagas/suas-vagas.component.html
@@ -6,7 +6,7 @@
         </div>
       </div>
       <div>
-        <button class="mb-3 btn btn-primary">Adicionar nova vaga</button>
+        <button class="mb-3 btn botao-vagas">Adicionar nova vaga</button>
       </div>
     <table class="table table-striped mb-3 tabela tabela-listrada" *ngIf="temVagasCadastradas">
         <thead class="titulos-tabela">
