--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/dados-usuario/dados-usuario.component.css
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/painel-empresa/dados-usuario/dados-usuario.component.css
@@ -18,7 +18,46 @@
         margin-bottom: 100px;
     }
     
-    .titulo {
+    .grafico {
+        border: solid 1px #5E7888;
+        margin-top: 30px;
+        position: relative;
+        
+    }
+
+    .grafico-imagem {
+        width: 100%;
+        height: 580px;
+
+    }
+
+    .botao-grafico{
+        color: #fff;
+        background-color: #5E7888;
+        border: solid 1px #fff;
+        transition: transform 2ms;
+
+    }
+
+    .botao-grafico:hover{
+        transform: scale(1.08);
+    }
+
+    .alinhamento-botao-grafico {
+        position: absolute;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        bottom: 15px;
+    }
+
+    .titulo-usuario {
+        padding-top: 20px;
+        padding-bottom: 5px;
+        font-family: 'DM Sans', sans-serif;
+    }
+
+    .titulo-metricas {
         padding-top: 20px;
         padding-bottom: 5px;
         font-family: 'DM Sans', sans-serif;
@@ -41,7 +80,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-top: 15px;
+        padding-top: 30px;
     }
     
     .botao-alterar {
